instance-applications/113-ibm-kmodels/templates/03-kmodel-istio.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: opendatahub
  annotations:
    argocd.argoproj.io/sync-wave: "139"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true

spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ds-pipeline-instance
  namespace: opendatahub
  annotations:
    argocd.argoproj.io/sync-wave: "140"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  host: ds-pipeline-instance.opendatahub.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8888
        tls:
          mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-instance
  namespace: opendatahub
  annotations:
    argocd.argoproj.io/sync-wave: "141"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  host: minio-instance.opendatahub.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 9000
        tls:
          mode: DISABLE
