instance-applications/113-ibm-kmodels/templates/04-aibroker-istio.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: opendatahub
  annotations:
    argocd.argoproj.io/sync-wave: "128"
spec:
  mtls:
    mode: PERMISSIVE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ds-pipeline-instance
  namespace: opendatahub
  annotations:
    argocd.argoproj.io/sync-wave: "129"
spec:
  host: ds-pipeline-instance.opendatahub.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8888
        tls:
          mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-instance
  namespace: opendatahub
  annotations:
    argocd.argoproj.io/sync-wave: "130"
spec:
  host: minio-instance.opendatahub.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 9000
        tls:
          mode: DISABLE
